src/objects/Suppression__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suppressions</relationshipLabel>
        <relationshipName>Suppressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>OR(AND(SuppressionStartDate__c &lt;= TODAY(),TODAY()&lt;=SuppressionEndDate__c),
AND(SuppressionStartDate__c &lt;=TODAY(),ISBLANK(SuppressionEndDate__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Group</label>
        <referenceTo>ContractGroup__c</referenceTo>
        <relationshipLabel>Suppressions</relationshipLabel>
        <relationshipName>Suppressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Suppressions</relationshipLabel>
        <relationshipName>Suppressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuppressBillPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Bill Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuppressRecoveryNotice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Recovery Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuppressionEndDate__c</fullName>
        <description>End Date of Suppression</description>
        <label>Suppression End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuppressionReason__c</fullName>
        <description>Client specific. Clients may add or remove the picklist values based on their own business.</description>
        <label>Suppression Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Court Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Summons Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Reading Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment with Non Cleared Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Dated Cheques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speculative Correspondence</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuppressionStartDate__c</fullName>
        <description>Start Date of Suppression.</description>
        <label>Suppression Start Date</label>
        <type>Date</type>
    </fields>
    <label>Suppression</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SID-{00000000}</displayFormat>
        <label>Suppression ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BeforeSuppressionStartDate</fullName>
        <active>true</active>
        <description>Validates that a custom field called End Date does not come before another custom field called Start Date.</description>
        <errorConditionFormula>SuppressionStartDate__c &gt; SuppressionEndDate__c</errorConditionFormula>
        <errorDisplayField>SuppressionEndDate__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillPrintAndRecoveryCantbeBlank</fullName>
        <active>true</active>
        <description>Suppress Bill Print and Suppress Recovery Notice can&apos;t be both blank</description>
        <errorConditionFormula>AND( SuppressBillPrint__c =FALSE, SuppressRecoveryNotice__c =FALSE)</errorConditionFormula>
        <errorDisplayField>SuppressRecoveryNotice__c</errorDisplayField>
        <errorMessage>Suppress Bill Print and Suppress Recovery Notice can&apos;t be both blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LessThanToday</fullName>
        <active>true</active>
        <description>Can&apos;t be earlier than TODAY</description>
        <errorConditionFormula>SuppressionStartDate__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>SuppressionStartDate__c</errorDisplayField>
        <errorMessage>Can&apos;t be earlier than TODAY&apos;s Date.</errorMessage>
    </validationRules>
</CustomObject>